# JAPP

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jorkyin/japp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jorkyin/japp/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/jorkyin/japp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jphotolibrary/: build.gradle
jphotolibrary/src/androidTest/java/com/jorkyin/jphotolibrary/: ExampleInstrumentedTest.java
jphotolibrary/src/main/: AndroidManifest.xml
jphotolibrary/src/main/java/com/jorkyin/jphotolibrary/: JPhotoViewItemDecoration.java
jphotolibrary/src/main/res/layout/: item_galler_photo.xml
jphotolibrary/src/main/res/values/: dimens.xml  strings.xml
jphotolibrary/src/test/java/com/jorkyin/jphotolibrary/: ExampleUnitTest.java
rtP2PLibrary/: build.gradle
rtP2PLibrary/src/androidTest/java/com/runtop/rtp2plibrary/: ExampleInstrumentedTest.java
rtP2PLibrary/src/main/: AndroidManifest.xml
rtP2PLibrary/src/main/cpp/: CMakeLists.txt
rtP2PLibrary/src/main/cpp/include/FFmpeg3/libavformat/: avio.h
rtP2PLibrary/src/main/cpp/include/rt_native/: rt_p2p.h
rtP2PLibrary/src/main/cpp/include/rtlib/: rt_object_api.h  rt_p2p_api_define.h  rt_p2p_log.h  rt_p2p_types.h
rtP2PLibrary/src/main/cpp/src/: NativeCallBack.c  NativeCallBack.h  NativeCaller.c  NativeCaller.h  RTMap.c  RTMap.h  Rt_stream_in.c  Rt_stream_in.h  Rt_stream_out.c  Rt_stream_out.h  packet_queue.c  packet_queue.h  rt_p2p_live.c  rt_p2p_live.h  test.c
rtP2PLibrary/src/main/cpp/src/ffmpeg_module/: ffmpeg_aac_encoder.c  ffmpeg_aac_encoder.h  ffmpeg_audio.c  ffmpeg_audio.h  ffmpeg_audio_decoder.c  ffmpeg_audio_decoder.h  ffmpeg_mp4.c  ffmpeg_mp4.h  ffmpeg_parser.c  ffmpeg_parser.h  ffmpeg_pcm_swr.c  ffmpeg_pcm_swr.h  ffmpeg_pcmskin.c  ffmpeg_pcmskin.h  ffmpeg_video_decoder.c  ffmpeg_video_decoder.h  ffmpeg_video_sws.c  ffmpeg_video_sws.h
rtP2PLibrary/src/main/cpp/src/play_module/: play_pcm_to_audioTrack.c  play_pcm_to_audioTrack.h  play_pcm_to_opensl_io.c  play_pcm_to_opensl_io.h  play_rgba_to_nativeWindow.c  play_rgba_to_nativeWindow.h
rtP2PLibrary/src/main/cpp/src/record_file_module/: record_mp4.c  record_mp4.h  record_picture.c  record_picture.h
rtP2PLibrary/src/main/java/com/runtop/rtp2plibrary/: RTCamera.java  RTCapability.java  RTNetInfo.java  RTP2P.java  RTVideoView.java  RTVideoViewPresenter.java  Util.java
rtP2PLibrary/src/main/res/drawable/: radius_rim.xml  textview_border.xml
rtP2PLibrary/src/main/res/layout/: rt_video_view.xml
rtP2PLibrary/src/main/res/values/: colors.xml  strings.xml
rtP2PLibrary/src/test/java/com/runtop/rtp2plibrary/: ExampleUnitTest.java
rtconstraintlibrary/src/androidTest/java/com/jorkyin/rtconstraintlibrary/: ExampleInstrumentedTest.java
rtconstraintlibrary/src/main/: AndroidManifest.xml
rtconstraintlibrary/src/main/java/com/jorkyin/rtconstraintlibrary/: RTImageTextView.java  RTTitleBarView.java
rtconstraintlibrary/src/main/res/layout/: item_image_text.xml  item_title_menu.xml
rtconstraintlibrary/src/main/res/values/: attrs.xml  strings.xml
rtconstraintlibrary/src/test/java/com/jorkyin/rtconstraintlibrary/: ExampleUnitTest.java
(+6 files in other folders)
